<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Twitter</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_timeline">Home Timeline</string>
    <string name="tag_line">Tag Line</string>
    <string name="_5_followers">5 Followers</string>
    <string name="_5_following">5 Following</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="post">Post</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>


</resources>