<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.codepath.apps.mytwitter.TimelineActivity">

    <item
        android:id="@id/miProfile"
        app:showAsAction="always"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        android:onClick="onProfileView"/>

    <item
        android:id="@id/postTweet"
        app:showAsAction="always"
        android:icon="@drawable/ic_post"
        android:title="@string/post"
        android:onClick="postTweet"/>

    <item android:id="@+id/action_search"
        android:orderInCategory="5"
        android:title="@string/search"
        android:icon="@drawable/search_icon"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />


</menu>